@@ -3,6 +3,8 @@ Version 1.2-svn
    * updated translations: Italian
  * multiplayer maps:
     * revised maps: Blitz
+ * bug fix
+    * correctly use translated team names when available
 
 Version 1.2:
  * campaigns:
@@ -92,6 +94,7 @@ Version 1.1.14:
    * add script to strip ICC profiles from images
    * modified wesnoth-pngcrush to use optipng instead of pngrewrite (a lot
      slower than the old script but good compression results)
+   * fix downloading campaigns in amigaos
 
 Version 1.1.13:
  * graphics
